--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/eclipse/eclipse-jee-2021-03-R-win32-x86_64/eclipse/lombok.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
