--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/user2/Desktop/mybatis-3.5.11/mybatis-3.5.11/mybatis-3.5.11.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="D:/eclipse/eclipse-jee-2021-03-R-win32-x86_64/eclipse/lombok.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JDBC"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
